Version 0.35.1 (2022-02-21)
- Fix IpBlind

Version 0.35.0 (2022-02-19)
- Fix usage of async_add_executor_job
- Improve local_ip identification

Version 0.34.2 (2022-02-16)
- Add is_locking/is_unlocking to lock

Version 0.34.1 (2022-02-16)
- Fix siren definition

Version 0.34.0 (2022-02-15)
- Use backported StrEnum
- Sort constants to identify HA constants
- Add new platform siren

Version 0.33.0 (2022-02-14)
- Make parameter availability more robust
- Add hvac_action to IP Thermostats
- Add hvac_action to some HM Thermostats

Version 0.32.4 (2022-02-12)
- add opening/closing to IPGarage

Version 0.32.3 (2022-02-12)
- Add state to HmIP-MOD-HO
- Use enum value for actions

Version 0.32.2 (2022-02-11)
- Fix HmIP-MOD-HO

Version 0.32.1 (2022-02-11)
- Update to pydevccu 0.1.3
- Priotize detection of devices for custom entities (e.g. HmIP-PCBS2)
- Add HmIPW-FIO6 as CE

Version 0.32.0 (2022-02-10)
- Move create_devices to central
- Move parameter visibility relevant data to own module

Version 0.31.2 (2022-02-08)
- Add HmIP-HDM2 to cover
- Fix unignore filename

Version 0.31.1 (2022-02-07)
- Improve naming
- Add multiplier to entity
- Substitute device_type of HB devices for usage in custom_entities

Version 0.31.0 (2022-02-06)
- Add missing return statement
- Add last_update to every value_cache_entry
- Rename init_entity_value to load_entity_value
- move (un)ignore methods to device
- Add support for unignore file
- Make PROCESS a binary_sensor
- Add DIRECTION & ACTIVITY_STATE to cover (is_opening, is_closing)

Version 0.30.1 (2022-02-04)
- Start hub earlier

Version 0.30.0 (2022-02-03)
- Add paramset to entity
- Add CHANNEL_OPERATION_MODE for HmIP(W)-DRBL4
- Fix DLD lock_state
- Add is_jammed to locks

Version 0.29.2 (2022-02-02)
- Add support for blacklisting a custom entity
- Add HmIP-STH to climate custom entities

Version 0.29.1 (2022-02-02)
- Check if interface callback is alive
- Add class for HomeamaticIP Blinds

Version 0.29.0 (2022-02-01)