@@ -1,5 +1,6 @@
 Version 0.35.1 (2022-02-21)
 - Fix IpBlind
+- Fix parameter visibility
 
 Version 0.35.0 (2022-02-19)
 - Fix usage of async_add_executor_job
